Fixed the bottom margin to even out the spacing on... something

--- a/.themes/darkstripes/sass/base/_theme.scss
+++ b/.themes/darkstripes/sass/base/_theme.scss
@@ -116,7 +116,7 @@ body {
     -moz-border-radius: 0.4em;
     -webkit-border-radius: 0.4em;
     border-radius:0.4em;
-    margin-bottom: 2em;
+    margin-bottom: 0;
   }
 
   #main{
